--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>Return to Title IV</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,9 +20,9 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
-							<li><a href="#three">Get in touch</a></li>
+							<li><a href="#one">Return of Aid</a></li>
+							<li><a href="#two">Determining Aid</a></li>
+							<li><a href="#three">Repayment of Aid</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -34,9 +34,15 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Hyperspace</h1>
-							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
+							<h1>Return to Title IV</h1>
+							<h2>What is Title IV Aid?</h2>
+							<p>Title IV of the Higher Education Act of 1965, as amended in 1998 (Title
+								IV, and HEA program) establishes general rules that apply to federal
+								student financial assistance programs. For purposes of Return of Title IV Funds, these programs include:</p>
+							<ul>
+								<li>Pell and Federal Supplemental Educational Opportunity (FSEOG) Grants</li>
+								<li>Direct Loans and Direct PLUS Loans</li>
+							</ul>	
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -49,11 +55,24 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+
+									<h2>Return of Title IV Aid</h2>
+									<p>It is important that you consider very carefully the consequences of withdrawing from your classes. If you do withdraw from your classes, you may be required to return your Title IV Aid (including federal grants, loans, and work-study programs).</p>
+									<h2>Types of Withdrawals</h2>
+									<p>There are two types of withdrawals, official withdrawals, and unofficial withdrawals.</p>
+									<ul>
+										<li>The official withdrawal date is determined by the Registrar based on when a student uses college processes to drop or withdraw from their classes.
+										</li>
+										<li>Unofficial withdrawals are students who stop attending classes but do not use college processes to properly drop or withdraw from class. The withdrawal date is determined by the student's last date of attendance or participation in their courses. <b>It is the student's responsibility to officially withdraw from all classes.</b>
+										</li>
 									</ul>
+									<h2>Policy for Return to Title IV</h2>
+									<p>Under the Higher Education Amendment regulation called Return of Title IV Funds, all students receiving Title IV federal grant or loan assistance who withdraw from courses in the first 60% of the term are subject to the Return of Title IV Fund policy. This regulation affects the calculation of aid to be returned as well as repayment procedures. The percentage of aid earned by a Title IV student is determined by calculating the percentage of the period that the student completed.
+									</p>
+									<h2>Return of Title IV Funds (Earned vs Unearned Aid)
+									</h2>
+									<p>Within 45 days from when a student withdraws (officially or unofficially) the college calculates the amount of financial aid the student earned prior to the date of withdrawal. Any aid that exceeds the earned amount is considered unearned. The unearned financial aid must be returned to the respective federal programs no later than 45 days from when the student withdrew from their courses (officially or unofficially). The calculation is based upon only the amount of Title IV Aid for which you were eligible. 
+									</p>
 								</div>
 							</div>
 						</section>
@@ -61,10 +80,21 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+									<h2>Determining Earned Aid</h2>
+									<p>A student is considered to have earned all their financial aid if they complete 60% of the course term (last date to withdraw without academic penalty) and attendance is confirmed.
+									</p>
+									<h2>Determining Unearned Aid
+									</h2>
+									<p>If the student completes less than 60% of the term, the percentage of aid earned equals the percentage of the completed period. To calculate the amount of unearned aid, the number of days completed up to the withdrawal date are divided by the total days in the payment period or term. This percentage is also the percentage of aid earned.
+									</p>
+									<h3>For example:</h3>
+									<ul>
+										<li>If $1,000 in federal aid is disbursed, and the student withdraws at the 30% point of the term, approximately $700 of the aid is unearned and needs to be returned to the identified aid program.
+										</li>
+										<li>If the student withdraws at the 50% point in the term, approximately $500 of the aid is unearned and needs to be returned to the identified aid program.
+										</li>
+										<li>If the student completes 60% or more of the term, the student earns 100% of aid.
+										</li>
 									</ul>
 								</div>
 							</div>
@@ -73,11 +103,42 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+									<h2>Repayment of Unearned Aid</h2>
+									<p>Any amount of unearned grant funds that the student must return is called an overpayment. The calculation of the return of these funds may result in the student owing a balance to Tidewater Community College and/or the Department of Education. 
+									</p>
+									<h4>The “Return to Title IV” calculation has several steps. Below is the pertinent information involved in the calculation.
+									</h4>
+									<ul>
+										<li>The school determines the amount of Title IV financial aid that has been disbursed to your account versus the amount of Title IV financial aid that could have been disbursed to your account. In most cases the full amount of aid will have disbursed. In the instance that your aid has not been disbursed you may be eligible for a post-withdrawal disbursement.
+										</li>
+										<li>The school determines the amount of time you attended versus the total days of the semester. Breaks of five or more days during the semester are removed from the total days of the semester.  The calculation is represented as a percentage of aid the student has earned.
+										</li>
+										<li>The school multiplies the percentage of aid earned by the total amount of disbursed aid and aid that could have disbursed.  This is the amount of aid the student has earned.
+										</li>
+										<li>The school takes the amount of aid the student has earned and subtracts it from the total aid disbursed for the student. This is the amount of aid the student has not earned.
+										</li>
+										<li>The school determines the amount of institutional charges that have been applied to the student's account. This amount is multiplied by the percentage of aid earned. This is the amount of unearned institutional charges.
+										</li>
+										<li>
+											The school reviews the amount of unearned aid versus the amount of unearned institutional charges, which is done within 30 days from the date the school determined the student withdrew (officially and unofficially). The lesser of the numbers is the amount of aid that is returned. The school has 45 days from the date the school determined the student withdrew (officially and unofficially) to return this amount. Below is a list of the Title IV programs to which the R2T4 calculation applies. The programs are listed in the exact order in which funds must be returned to the Department of Education (as applicable):
+											<ul>
+												<li>Federal Direct Unsubsidized Loan
+												</li>
+												<li>Federal Direct Subsidized Loan
+												</li>
+												<li>Federal Direct PLUS Loan
+												</li>
+												<li>Federal Pell Grant
+												</li>
+												<li>Federal Supplemental Educational Opportunity Grant  (FSEOG)
+												</li>
+												<li>Other Federal, State, Private, or Institutional Aid
+												</li>
+											</ul>
+										</li>
+
 									</ul>
+									<p>If you need to withdraw from your classes, you are encouraged to speak to a financial aid advisor before doing so to determine how it may affect your financial aid and your Satisfactory Academic Progress. If you have any questions about your Title IV program funds you may contact the <a href="https://help.tcc.edu/s/topic/0TO1R000000gmmZWAQ/financial-aid">Tidewater Community College Financial Aid Office</a></p>
 								</div>
 							</div>
 						</section>
