Add images and change colors in accordance with TCC Visual Standards

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic07.jpg" alt="" data="previously images/pic01.jpg" data-position="center center" style="" /></a>
+							<a href="#" class="image"><img src="images/pic10.jpg" alt="" data="previously images/pic01.jpg" data-position="center center" style="object-fit:contain" /></a>
 							<div class="content">
 								<div class="inner">
 
@@ -77,7 +77,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/pic11.jpg" alt="" data-position="55% center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Determining Earned Aid</h2>
@@ -100,7 +100,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/pic09.jpg" alt="" data-position="31% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Repayment of Unearned Aid</h2>
