--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 						</section>
 					</section>
 
-				<!-- Two -->
+				<!-- Two
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>What we do</h2>
@@ -187,7 +187,7 @@
 						</div>
 					</section>
 
-				<!-- Three -->
+				Three
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
@@ -244,7 +244,7 @@
 								</section>
 							</div>
 						</div>
-					</section>
+					</section> -->
 
 			</div>
 
@@ -254,6 +254,16 @@
 					<ul class="menu">
 						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
+					<li>
+						<h3>Social</h3>
+						<ul class="icons">
+							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						</ul>
+					</li>
 				</div>
 			</footer>
 
