Add and format social media links

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Return of Aid</a></li>
-							<li><a href="#two">Determining Aid</a></li>
-							<li><a href="#three">Repayment of Aid</a></li>
+							<li><a href="#return">Return of Aid</a></li>
+							<li><a href="#determination">Determining Aid</a></li>
+							<li><a href="#repayment">Repayment of Aid</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -54,7 +54,7 @@
 						<section>
 							<a href="#" class="image"><img src="images/pic10.jpg" alt="" data="previously images/pic01.jpg" data-position="center center" style="object-fit:contain" /></a>
 							<div class="content">
-								<div class="inner">
+								<div class="inner" id="return">
 
 									<h2>Return of Title IV Aid</h2>
 									<p>It is important that you consider very carefully the consequences of withdrawing from your classes. If you do withdraw from your classes, you may be required to return your Title IV Aid (including federal grants, loans, and work-study programs).</p>
@@ -79,7 +79,7 @@
 						<section>
 							<a href="#" class="image"><img src="images/pic11.jpg" alt="" data-position="55% center" /></a>
 							<div class="content">
-								<div class="inner">
+								<div class="inner" id="determination">
 									<h2>Determining Earned Aid</h2>
 									<p>A student is considered to have earned all their financial aid if they complete 60% of the course term (last date to withdraw without academic penalty) and attendance is confirmed.
 									</p>
@@ -102,7 +102,7 @@
 						<section>
 							<a href="#" class="image"><img src="images/pic09.jpg" alt="" data-position="31% 25%" /></a>
 							<div class="content">
-								<div class="inner">
+								<div class="inner" id="repayment">
 									<h2>Repayment of Unearned Aid</h2>
 									<p>Any amount of unearned grant funds that the student must return is called an overpayment. The calculation of the return of these funds may result in the student owing a balance to Tidewater Community College and/or the Department of Education. 
 									</p>
@@ -250,20 +250,15 @@
 
 		<!-- Footer -->
 			<footer id="footer" class="wrapper style1-alt">
+					<ul class="icons">
+						<li><a href="https://twitter.com/tccva" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.facebook.com/tidewatercommunitycollege" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="https://instagram.com/tccva/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+					</ul>
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; 2023 R. Fairchild. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
-					<li>
-						<h3>Social</h3>
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						</ul>
-					</li>
 				</div>
 			</footer>
 
