--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 						<li><a href="https://www.facebook.com/tidewatercommunitycollege" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="https://instagram.com/tccva/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 					</ul>
-				<div class="inner">
+				<div class="inner copyright">
 					<ul class="menu">
 						<li>&copy; 2023 R. Fairchild. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
