--- a/index.html
+++ b/index.html
@@ -47,7 +47,15 @@
 							<ul>
 								<li>Pell and Federal Supplemental Educational Opportunity (FSEOG) Grants</li>
 								<li>Direct Loans and Direct PLUS Loans</li>
-							</ul>	
+							</ul>
+							<div id="video-player">
+								<video width="50%" height="auto" controls>
+									<source src="/assets/title-iv.mp4" type="video/mp4">
+									<!-- <source src="movie.ogg" type="video/ogg"> -->
+									Your browser does not support the video tag.
+								</video>
+							</div>
+
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
