--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 		<link rel="icon" type="image/png" href="/assets/favicons/favicon-32x32.png" sizes="32x32" />
 		<link rel="icon" type="image/png" href="/assets/favicons/favicon-16x16.png" sizes="16x16" />
 		
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,300;0,400;1,700&display=swap" rel="stylesheet">
 
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -39,7 +42,7 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Return to Title IV</h1>
+							<h1>RETURN TO TITLE IV</h1>
 							<h2>What is Title IV Aid?</h2>
 							<p>Title IV of the Higher Education Act of 1965, as amended in 1998 (Title
 								IV, and HEA program) establishes general rules that apply to federal
