Italicize main header

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>RETURN TO TITLE IV</h1>
+							<h1 style="font-style:italic">RETURN TO TITLE IV</h1>
 							<h2>What is Title IV Aid?</h2>
 							<p>Title IV of the Higher Education Act of 1965, as amended in 1998 (Title
 								IV, and HEA program) establishes general rules that apply to federal
